--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="luanamg.JPG" alt="Personal photo" width="200"  height="200" class="rounded-circle mx-3 img-fluid img-thumbnail shadow">
+                            <img src="media/luanamg.JPG" alt="Personal photo" width="200"  height="200" class="rounded-circle mx-3 img-fluid img-thumbnail shadow">
                             <hr class="my-4">
                             
                             <p> <strong>Quote:</strong> Deforestation leads to climate change, which leads to ecosystem losses, which negatively impacts our livelihoods — it's a vicious cycle. -Gisele Bündchen</p>
@@ -93,7 +93,7 @@
         <div class="row"> <!--row 3 cards-->
             <div class="col-md-4">
                 <div class="card shadow" style="width: 18rem;">
-                    <img src="books.jpeg" class="card-img-top img-fluid" alt="books">
+                    <img src="media/books.jpeg" class="card-img-top img-fluid" alt="books">
                     <div class="card-body">
                         <h1 class="card-title">Hobbies</h1>
                         <p class="card-text">I do not have a lot of hobbies but I like to read, study, and photograph. That is how I spend most of my free time. Click the button to learn more!</p>
@@ -103,17 +103,17 @@
             </div>
             <div class="col-md-4">
                 <div class="card shadow" style="width: 18rem;">
-                    <img src="worldmap.png" class="card-img-top img-fluid" alt="globe">
+                    <img src="media/worldmap.png" class="card-img-top img-fluid" alt="globe">
                     <div class="card-body">
                         <h1 class="card-title">Countries</h1>
                         <p class="card-text">I really like to travel to different countries to meet people of many cultures. Some countries I woud like to go to are Germany,  Ethiopia, Japan, and Egypt. Click the button to learn more!</p>
-                        <a href="countries.html" class="btn btn-danger">Go to my Countries</a>
+                        <a href="media/countries.html" class="btn btn-danger">Go to my Countries</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card shadow" style="width: 18rem;">
-                    <img src="galinhada.jpg" class="card-img-top img-fluid" alt="Galinha">
+                    <img src="media/galinhada.jpg" class="card-img-top img-fluid" alt="Galinha">
                     <div class="card-body">
                         <h1 class="card-title">Recipe</h1>
                         <p class="card-text">I have a recipe for Galinhada. It is a cultural food from Brazil that I make often with my mom. Click the button to learn more!</p>
