--- a/recipe.html
+++ b/recipe.html
@@ -98,10 +98,10 @@
                 <li><strong>Enjoy!</strong></li> 
             </ol> 
             <div class="picture"> 
-                <img src="galinhada.jpg" alt="Galinhada" width="600"> 
+                <img src="Media/galinhada.jpg" alt="Galinhada" width="600"> 
             </div> 
             <div class="video"> 
-                <video src="galinhadavideo.webm" width="600" height="500" controls></video> 
+                <video src="Media/galinhadavideo.webm" width="600" height="500" controls></video> 
             </div> 
             <h3>Sources:</h3> 
             <a href="https://www.youtube.com/watch?v=MjPSgqPeEGw">https://www.youtube.com/watch?v=MjPSgqPeEGw</a> 
