--- a/countries.html
+++ b/countries.html
@@ -83,13 +83,10 @@
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
-                <figure id="figure">
-                    <a href="https://travel.usnews.com/Berlin_Germany/Things_To_Do/Berlin_Wall_Memorial_64417/" target="_blank">
-                        <img src="berlinmemorial.jpg" alt="berlin" width="255" height="300" class="img-fluid">
-                    </a>
-                    <img src="waterfall.jpeg" alt="blue nile waterfall" width="255" height="300" class="img-fluid">
-                    <img src="pyramids.jpg" alt="pyramids of giza" width="255" height="300" class="img-fluid">
-                    <img src="tokyopic.jpeg" alt="tokyo" width="255" height="300" class="img-fluid">
+                <figure>
+                    <img src="Media/berlinmemorial.jpg" alt="berlin" width="255" height="300" class="img-fluid">                    <img src="media/waterfall.jpeg" alt="blue nile waterfall" width="255" height="300" class="img-fluid">
+                    <img src="Media/pyramids.jpg" alt="pyramids of giza" width="255" height="300" class="img-fluid">
+                    <img src="Media/tokyopic.jpeg" alt="tokyo" width="255" height="300" class="img-fluid">
                     <figcaption>Places I would like to visit</figcaption>
                 </figure>
             </div>
@@ -106,19 +103,19 @@
         <div class="row">
             <div class="col-md-6">
                 <video width="400" height="340" controls loop>
-                    <source src="berlinwallcnn.webm">
+                    <source src="Media/berlinwallcnn.webm">
                     The browser doesn't support the format.
                 </video>
                 <hr>
             </div>
             <div class="col-md-6">
                 <div class="d-flex">
-                    <img src="germanyflag.png" alt="Germanys Flag" width="265" height="250" class="img-fluid img-thumbnail">
-                    <img src="ethiopiaflag.png" alt="Ethiopia Flag" width="265" height="250" class="img-fluid img-thumbnail">
+                    <img src="Media/germanyflag.png" alt="Germanys Flag" width="265" height="250" class="img-fluid img-thumbnail">
+                    <img src="Media/ethiopiaflag.png" alt="Ethiopia Flag" width="265" height="250" class="img-fluid img-thumbnail">
                 </div>
                 <div class="d-flex">
-                    <img src="egyptflag.png" alt="Egypt Flag" width="265" height="250" class="img-fluid img-thumbnail">
-                    <img src="tokyoflag.png" alt="Japan Flag" width="265" height="250" class="img-fluid img-thumbnail">
+                    <img src="Media/egyptflag.png" alt="Egypt Flag" width="265" height="250" class="img-fluid img-thumbnail">
+                    <img src="Media/tokyoflag.png" alt="Japan Flag" width="265" height="250" class="img-fluid img-thumbnail">
                 </div>
             </div>
         </div>
