--- a/hobbies.html
+++ b/hobbies.html
@@ -75,10 +75,10 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="harrypotter.avif" alt="Sorceres's stone" height="600" class="img-fluid">
+                <img src="Media/harrypotter.avif" alt="Sorceres's stone" height="600" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <img src="anightdivided.webp" alt="A Night Divided" class="img-fluid">
+                <img src="Media/anightdivided.webp" alt="A Night Divided" class="img-fluid">
             </div>
         </div>
         <br>
@@ -95,7 +95,7 @@
             <div class="col-md-6 text-center">
                 <table class="table-bordered">
                     <tr>
-                        <td rowspan="4" colspan="2"> <img src="idphoto.jpg" alt="luana photo" width="100" height="130" class="img-fluid"> </td>
+                        <td rowspan="4" colspan="2"> <img src="Media/idphoto.jpg" alt="luana photo" width="100" height="130" class="img-fluid"> </td>
                         <th colspan="3">LANE TECH H.S. COLLEGE PREP</th>
                     </tr>
                     <tr>
@@ -182,10 +182,10 @@
                 </table>
             </div>
             <div class="col-md-6">
-                    <audio src="audio.m4a" controls>
+                    <audio src="Media/audio.m4a" controls>
                         The browser doesn't support the format.
                     </audio>
-                    <img src="freenotes.jpg" alt="Music Notes" width="520" height="400" class="img-fluid">
+                    <img src="Media/freenotes.jpg" alt="Music Notes" width="520" height="400" class="img-fluid">
             </div>
         </div>
     </div>
