--- a/recipethree.html
+++ b/recipethree.html
@@ -120,7 +120,7 @@
                 <div class="col-md-6 shadow">
                     <div class="card">
                         <div class="card-body text-center"> 
-                            <video src="galinhadavideo.webm" width="510" height="500" controls class="img-fluid"></video> 
+                            <video src="Media/galinhadavideo.webm" width="510" height="500" controls class="img-fluid"></video> 
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                 <div class="col-md-6 img-fluid shadow">
                     <div class="card">
                         <div class="card-body text-center">
-                            <img src="galinhada.jpg" alt="galinhada" width="500" height="450" class="img-fluid">
+                            <img src="Media/galinhada.jpg" alt="galinhada" width="500" height="450" class="img-fluid">
                         </div>
                     </div>
                 </div>
