--- a/countries.html
+++ b/countries.html
@@ -84,7 +84,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <figure>
-                    <img src="Media/berlinmemorial.jpg" alt="berlin" width="255" height="300" class="img-fluid">                    <img src="media/waterfall.jpeg" alt="blue nile waterfall" width="255" height="300" class="img-fluid">
+                    <img src="Media/berlinmemorial.jpg" alt="berlin" width="255" height="300" class="img-fluid">                    
+                    <img src="Media/waterfall.jpeg" alt="blue nile waterfall" width="255" height="300" class="img-fluid">
                     <img src="Media/pyramids.jpg" alt="pyramids of giza" width="255" height="300" class="img-fluid">
                     <img src="Media/tokyopic.jpeg" alt="tokyo" width="255" height="300" class="img-fluid">
                     <figcaption>Places I would like to visit</figcaption>
