--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="card-body">
                         <h1 class="card-title">Recipe</h1>
                         <p class="card-text">I have a recipe for Galinhada. It is a cultural food from Brazil that I make often with my mom. Click the button to learn more!</p>
-                        <a href="recipe3.html" class="btn btn-danger">Go to my Bootstrap Recipe</a>
+                        <a href="recipethree.html" class="btn btn-danger">Go to my Bootstrap Recipe</a>
                     </div>
                 </div>
             </div>
