--- a/countries.html
+++ b/countries.html
@@ -110,14 +110,13 @@
                 <hr>
             </div>
             <div class="col-md-6">
-                <div class="d-flex">
                     <img src="Media/germanyflag.png" alt="Germanys Flag" width="265" height="250" class="img-fluid img-thumbnail">
                     <img src="Media/ethiopiaflag.png" alt="Ethiopia Flag" width="265" height="250" class="img-fluid img-thumbnail">
-                </div>
-                <div class="d-flex">
+                <!--/div>
+                <div class="col-md-3">
                     <img src="Media/egyptflag.png" alt="Egypt Flag" width="265" height="250" class="img-fluid img-thumbnail">
                     <img src="Media/tokyoflag.png" alt="Japan Flag" width="265" height="250" class="img-fluid img-thumbnail">
-                </div>
+                </div -->
             </div>
         </div>
         <p>Click <a href="#top">here</a> to go back to the top!</p>
